feat(ml-client): consumir endpoints de descoberta do ML Service no startup (#128)
- Criados DTOs para mapear as respostas de /contract e /appliance-catalog
- Atualizado MlServiceClient para chamadas reativas com WebFlux (Mono)
- Refatorado MlSchemaRegistry para tipagem forte e adicionado fallback de segurança
- Implementado retry assíncrono no MlSchemaDiscovery para reconexão em background
- Ajustada a chamada de categorias no AnalysisController para evitar erro de build
- Adicionado MlSchemaDiscoveryTest com cobertura de sucesso e fallback de indisponibilidade

Relaciona-se à task #128